# Optimal-Training-Subset

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: dokumentacja_koncowa.md  dokumentacja_v1.md
notebooks/: 00-MO-initial_model_tests.ipynb  01-MO-FashionMnist_initial_ind_size.ipynb  02-MO-colab_FashionMNIST_experiments.ipynb  03-MO-Cifar_initial_indyvidual.ipynb
optimal_training_subset/: config.py  main.py
optimal_training_subset/data/: dataloaders.py  datasets.py
optimal_training_subset/evolutionary/: base_strategy.py  mu,lamda.py  mu_lambda.py  mu_plus_lambda.py  one_plus_one.py
optimal_training_subset/experiments/: Cifar10-experiments.py  FashionMNIST_experiments.py
optimal_training_subset/models/: cnn3channel.py  mobilenet.py  simple_cnn.py
optimal_training_subset/optimizers/: hill_climbing.py  tabu_hill_climbing.py
optimal_training_subset/training/: train.py
optimal_training_subset/utils/: config.py  mlflow_utils.py  train_utils.py  training_utils.py
