[project]
name = "optimal_training_subset"
version = "0.0.1"
description = "Optimizing the Best Subset of Examples for Classifier Training"
authors = [
  { name = "MandM" },
]

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deap>=1.4.1",
    "mlflow>=2.19.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''
